07/24/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug with the source view for new users that caused a
      NullPointerException to be thrown when opening the source view.
    * Added a wrapper exe for windows users using jSmooth

07/21/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed bug 1509575. Files that are reloaded should always be loaded in a
      view that can accep the reloaded file.

07/20/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Released 0.5pre1
    * Keyboard shortcuts are now fully supported.
    * Added Japanese translation

07/12/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added functionality to save keyboard shortcuts. The shortcuts themselves
      work but the shortcut labels for menu items are not updated when the
      action is updated. This is a bug that is fixed in the beta for Java 6
      but obviously it can't wait that long.
    * Renamed EnhancedMenu to WrappingMenu. I think it's more descriptive.
    * Updated messages to load the messages files in UTF-8

07/10/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the Shortcuts option pane. However, it currently it doesn't work. 
      It only displays the built in options and the combo box.
    * Updated the shortcuts option pane so that it shows the select shortcut
      dialog.

07/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Rewrote the Messages class. Now it loads messages on demand and only
      loads the messages that it needs but allows the Locale to be changed at
      any time. It also now supports different countries and variants.

06/27/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added the GUIUtilities class for handling utility functions in jsXe.
    * Added the GrabKeyDialog which will be used to assign shortcuts.
    * Updated many classes for supporting shortcuts.

06/23/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added back rudimentary key bindings using Swing Actions so they get